News UAT/force-app/main/default/objects/Release_Task_Contact_Role__c/Release_Task_Contact_Role__c.object-meta.xml
<CustomObject>
    <description>Which contacts are related to a release task and why.</description>
    <label>Release Task Contact Role</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Release Task Contact Role Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Release Task Contact Roles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>