News UAT/force-app/main/default/objects/Release_Task_Contact_Role__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Release Task Roles</relationshipLabel>
    <relationshipName>R00N80000002bL3LEAU</relationshipName>
    <type>Lookup</type>
</CustomField>