News UAT/force-app/main/default/objects/Release_Task_Contact_Role__c/fields/Release_Task__c.field-meta.xml
<CustomField>
    <fullName>Release_Task__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Release Task</label>
    <referenceTo>Release_Task__c</referenceTo>
    <relationshipLabel>Contact Roles</relationshipLabel>
    <relationshipName>R00N80000002bL23EAE</relationshipName>
    <type>Lookup</type>
</CustomField>